update all files

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>What's In My Box</title>
-      <link rel="stylesheet" href="styles1.css">
+      <link rel="stylesheet" href="login.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
           method="GET">
 
 
-                <input type="email" placeholder="Email" class="input-field" required>
+                <input type="email" id = "email" placeholder="Email" class="input-field" required>
        <br>
        <br>
                 <input type="password" placeholder="Password" class="input-field" required>
