--- a/profile.html
+++ b/profile.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>profile</title>
+    <link rel="stylesheet" href="profile.css.css">
 </head>
 <body>
+
+<h1> What's In My Box</h1>
+<br>
+<br>
 
 </body>
 </html>
