sign up & profile update

--- a/profile.html
+++ b/profile.html
@@ -3,13 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>profile</title>
-    <link rel="stylesheet" href="profile.css.css">
+    <link rel="stylesheet" href="profile.css">
 </head>
 <body>
+<div class = "divider"> </div>
 
-<h1> What's In My Box</h1>
-<br>
-<br>
+<div class = "left half">
+<h1> What's In My Box?</h1>
 
+<img src = "lunch box.jpeg" alt = "picture from sign up"
+style="border-radius: 50%; width: 250px; object-fit: cover;">
+
+<p> <div class = "nickname" ><strong> @nickname</strong> </div>
+     @Email
+    <br>
+    <strong> number of lunch boxes</strong>
+ <strong> <button class = "edit"> &#9881; edit profile</button></strong>
+</p>
+    </div>
+<div class = "right half">
+    <img src="lunch box.jpeg" style = "border-radius: 10px";>
+</div>
 </body>
 </html>
