--- a/signup.html
+++ b/signup.html
@@ -39,10 +39,12 @@
             <label for="Password">Password:</label>
             <input type="Password" id="Password" placeholder="Create your Password">
         </div>
- <br>
       <br>
+      <br>
+      <!-- signup button -->
       <button class = "signup"> create an account </button>
 
+      <!-- back to signin -->
       <h2>Already have an account?</h2>
       <button class = "signin"> Sign in </button>
 
