update post and recipe

--- a/recipe.html
+++ b/recipe.html
@@ -2,9 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LunchBox Recipe</title>
+     <link rel="stylesheet" href="recipe.css">
 </head>
 <body>
+<div class="container">
+        <div class="right-section">
+            <h2 class="title">Meatballs With Rice</h2>
+            <p class="user">Karen Cohen</p>
+            <p class="timestamp">12/11/2024 10:30 PM</p>
+            <p class="description">
+                Beef meatballs with tomato sauce, goes perfect with white rice.
+            </p>
 
+            <p class="subheading">Ingredients:</p>
+            <ul class="ingredients">
+                <li>grounded beef - 500 g</li>
+                <li>tomato paste - 200 gr</li>
+                <li>white onion - 1</li>
+                <li>...</li>
+            </ul>
+
+            <p class="subheading">Recipe:</p>
+            <ul class="recipe">
+                <li>slice the onion...</li>
+                <li>fry in a hot pan with oil</li>
+                <li>add the ground meat</li>
+                <li>...</li>
+            </ul>
+
+            <p class="tag">#meat</p>
+
+            <!-- Icons -->
+            <div class="icons">
+
+                <button class="like-icon">💚</button>
+                <button class="chat-icon">💬</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
