--- a/recipe.html
+++ b/recipe.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>LunchBox Recipe</title>
      <link rel="stylesheet" href="recipe.css">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
 <div class="container">
@@ -35,9 +37,20 @@
 
             <!-- Icons -->
             <div class="icons">
+                <button class="like-icon">
+  <i class="far fa-heart"></i> <!-- אייקון לב -->
+</button>
 
-                <button class="like-icon">💚</button>
-                <button class="chat-icon">💬</button>
+
+                <button class="chat-icon">
+  <i class="far fa-comment-dots"></i> <!-- אייקון של בלון דיבור עם נקודות -->
+</button>
+
+
+<!--                <button class="like-icon">💚</button>-->
+<!--                <button class="like-icon">&#x1F44D;</button>-->
+<!--                <button class="chat-icon">💬</button>-->
+<!--                <button class="chat-icon">&#x1F4AC;</button>-->
             </div>
         </div>
     </div>
