--- a/login.html
+++ b/login.html
@@ -6,31 +6,20 @@
 </head>
 <body>
 
-<h3>What's In My Box?</h3>
-<br>
-<h4>Hello again!</h4>
-<h1>LOG IN</h1>
+<div class="container">
+    <h3>What's In My Box?</h3>
+    <h4>Hello again!</h4>
+    <h1>LOG IN</h1>
 
 
- <form action="#" id = 'login-form' class = "first"
-          method="GET">
-
-
-                <input type="email" id = "email" placeholder="Email" class="input-field" required>
-       <br>
-       <br>
-                <input type="password" placeholder="Password" class="input-field" required>
-       <br>
-       <br>
-                <button type="submit" class="login-btn">Login</button>
+<form action="#" id="login-form" method="GET">
+      <input type="email" id="email" placeholder="Email" class="input-field" required>
+      <input type="password" placeholder="Password" class="input-field" required>
+      <button type="submit" class="login-btn">Login</button>
     </form>
-     <br>
-     <br>
-            <p class="signup-text">don't have an account yet?</p>
 
-            <button class="signup-btn">Sign Up!</button>
-
-
-
+    <p class="signup-text">don't have an account yet?</p>
+    <button class="signup-btn">Sign Up!</button>
+  </div>
 </body>
 </html>
