--- a/recipe.html
+++ b/recipe.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <title>LunchBox Recipe</title>
      <link rel="stylesheet" href="recipe.css">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 </head>
 <body>
+
+<nav>
+        <div class="nav-logo">What's in my Box?</div>
+        <div class="nav-links">
+            <a href="#feed">Feed</a>
+            <a href="#profile">My Profile</a>
+            <a href="#share">Share a New Post</a>
+            <a href="#search">Search</a>
+            <a href="#logout" class="logout">Log Out</a>
+        </div>
+    </nav>
+
 <div class="container">
+        <div class="image-section">
+        <img src="lunch box.jpeg" alt="Lunchbox" />
+    </div>
+
         <div class="right-section">
             <h2 class="title">Meatballs With Rice</h2>
             <p class="user">Karen Cohen</p>
@@ -35,23 +50,7 @@
 
             <p class="tag">#meat</p>
 
-            <!-- Icons -->
-            <div class="icons">
-                <button class="like-icon">
-  <i class="far fa-heart"></i> <!-- אייקון לב -->
-</button>
 
-
-                <button class="chat-icon">
-  <i class="far fa-comment-dots"></i> <!-- אייקון של בלון דיבור עם נקודות -->
-</button>
-
-
-<!--                <button class="like-icon">💚</button>-->
-<!--                <button class="like-icon">&#x1F44D;</button>-->
-<!--                <button class="chat-icon">💬</button>-->
-<!--                <button class="chat-icon">&#x1F4AC;</button>-->
-            </div>
         </div>
     </div>
 </body>
