--- a/post.html
+++ b/post.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post A New Lunch Box</title>
@@ -72,8 +73,12 @@
 
                  <div class="right-section">
         <div class="photo-upload">
-    <label for="photo">Choose a photo from camera roll:</label>
-    <input type="file" id="photo" name="photo">
+     <label for="photo" class="photo-label">
+    Choose a photo from camera roll:
+         <br>
+         <i class="fas fa-camera"></i>
+  </label>
+  <input type="file" id="photo" name="photo" style="display:none;">
 </div>
 </div>
          </div>
