--- a/profile.html
+++ b/profile.html
@@ -18,10 +18,12 @@
         </div>
     </nav>
 
+<div class = "divider"> </div>
+
 <div class="container">
         <div class="left-half">
             <h1>What's In My Box?</h1>
-            <img src="lunch box.jpeg" alt="User Profile Picture" class="profile-picture">
+            <img src="profile.jpg" alt="User Profile Picture" class="profile-picture">
             <p>
                 <div class="nickname"><strong>@nickname</strong></div>
                 <span>@Email</span>
@@ -32,7 +34,11 @@
             </p>
         </div>
         <div class="right-half">
-            <img src="lunch box.jpeg" alt="Lunch Box" class="lunchbox-picture">
+            <img src="lunch box.jpeg" alt="Lunch Box1" class="lunchbox-picture">
+            <img src="lunch box.jpeg" alt="Lunch Box2" class="lunchbox-picture">
+            <img src="lunch box.jpeg" alt="Lunch Box3" class="lunchbox-picture">
+            <img src="lunch box.jpeg" alt="Lunch Box4" class="lunchbox-picture">
+
         </div>
     </div>
 </body>
