--- a/login.html
+++ b/login.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>What's In My Box</title>
-      <link rel="stylesheet" href="login.css">
+    <title>What's In My Box</title>
+    <link rel="stylesheet" href="login.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-<div class="container">
-    <h3>What's In My Box?</h3>
-    <h4>Hello again!</h4>
-    <h1>LOG IN</h1>
-
-
-<form action="#" id="login-form" method="GET">
-      <input type="email" id="email" placeholder="Email" class="input-field" required>
-      <input type="password" placeholder="Password" class="input-field" required>
-      <button type="submit" class="login-btn">Login</button>
-    </form>
-
-    <p class="signup-text">don't have an account yet?</p>
-    <button class="signup-btn">Sign Up!</button>
-  </div>
+    <div class="container">
+        <h3>What's In My Box?</h3>
+        <h4>Hello again!</h4>
+        <h1>LOG IN</h1>
+        <form action="#" id="login-form" method="GET">
+            <input type="email" id="email" placeholder="Email" class="input-field" required>
+            <input type="password" placeholder="Password" class="input-field" required>
+            <button type="submit" class="login-btn">Login</button>
+        </form>
+        <p class="signup-text">don't have an account yet?</p>
+        <button class="signup-btn">Sign Up!</button>
+    </div>
 </body>
 </html>
