--- a/recipe.html
+++ b/recipe.html
@@ -13,11 +13,11 @@
 <nav>
         <div class="nav-logo">What's in my Box?</div>
         <div class="nav-links">
-            <a href="#feed">Feed</a>
-            <a href="#profile">My Profile</a>
-            <a href="#share">Share a New Post</a>
+            <a href="feed.html">Feed</a>
+            <a href="profile.html">My Profile</a>
+            <a href="post.html">Share a New Post</a>
             <a href="#search">Search</a>
-            <a href="#logout" class="logout">Log Out</a>
+            <a href="login.html" class="logout">Log Out</a>
         </div>
     </nav>
 
