--- a/feed.html
+++ b/feed.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 
+<nav>
+        <div class="nav-logo">What's in my Box?</div>
+        <div class="nav-links">
+            <a href="feed.html">Feed</a>
+            <a href="profile.html">My Profile</a>
+            <a href="post.html">Share a New Post</a>
+            <a href="#search">Search</a>
+            <a href="login.html" class="logout">Log Out</a>
+        </div>
+    </nav>
+
+
 </body>
 </html>
