--- a/feed.html
+++ b/feed.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Feed</title>
+         <link rel="stylesheet" href="feed.css">
+
 </head>
 <body>
 
