--- a/signup.html
+++ b/signup.html
@@ -49,5 +49,7 @@
         <p class="signin-text">Already have an account?</p>
         <button class="signin-btn">Sign In</button>
     </div>
+    <script src="signup.js"></script>
+
 </body>
 </html>
