--- a/login.html
+++ b/login.html
@@ -12,11 +12,14 @@
         <h1>LOG IN</h1>
         <form action="#" id="login-form" method="GET">
             <input type="email" id="email" placeholder="Email" class="input-field" required>
-            <input type="password" placeholder="Password" class="input-field" required>
-            <button type="submit" class="login-btn">Login</button>
+            <span class="error" id="emailError"></span>
+            <input type="password" id="password" placeholder="Password" class="input-field" required>
+             <span class="error" id="passwordError"></span>
+            <button   type="submit" class="login-btn">Login</button>
         </form>
         <p class="signup-text">don't have an account yet?</p>
-        <button class="signup-btn">Sign Up!</button>
+        <button onclick="window.location.href='signup.html'" class="signup-btn">Sign Up!</button>
     </div>
+<script src="login.js"></script>
 </body>
 </html>
