--- a/signup.html
+++ b/signup.html
@@ -2,46 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="signup.css">
     <script defer src="signup.js"></script>
 </head>
 <body>
-        <h3>What's In My Box</h3>
+    <h3>What's In My Box</h3>
 
     <div class="container">
         <h4>Create Your Account</h4>
         <form action="#" id="signup-form" method="POST" class = "signup-form" enctype="multipart/form-data">
 
-            <div class="photo-upload">
-
-    <label for="profile-picture" class="photo-label">
-                                <i class="fas fa-camera"></i>
-        Upload Profile Picture
-    </label>
-    <input type="file" id="profile-picture" accept="image/*" style="display: none;">
-</div>
+            <!-- Profile Picture Upload -->
+            <div class="form-group photo-upload">
+                <label for="profile-picture" class="photo-label">
+                    <i class="fas fa-camera"></i>
+                    Upload Profile Picture
+                </label>
+                <input type="file" id="profile-picture" accept="image/*" style="display: none;">
+            </div>
 
             <!-- Username -->
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" placeholder="Enter your username" class="input-field" required>
-                     <span class="error" id="usernameError"></span>
+                <span class="error" id="usernameError"></span>
             </div>
+
             <!-- Email -->
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" placeholder="Enter your email" class="input-field" required>
                 <span class="error" id="emailError"></span>
             </div>
+
             <!-- Password -->
             <div class="form-group">
                 <label for="password">Password:</label>
                 <input type="password" id="password" placeholder="Create your password" class="input-field" required>
                  <span class="error" id="passwordError"></span>
             </div>
+
             <!-- Signup Button -->
             <button type="submit" class="signup-btn">Create Account</button>
         </form>
