--- a/profile.html
+++ b/profile.html
@@ -26,20 +26,25 @@
             <h1>What's In My Box?</h1>
             <img src="profile.jpg" alt="User Profile Picture" class="profile-picture">
             <p>
-                <div class="nickname"><strong>@nickname</strong></div>
+                <div class="username"><strong>@username</strong></div>
                 <span>@Email</span>
                 <br>
                 <strong>Number of lunch boxes</strong>
-            <br>
-                <button class="edit">&#9881; Edit Profile</button>
             </p>
         </div>
         <div class="right-half">
-            <img src="lunch box.jpeg" alt="Lunch Box1" class="lunchbox-picture">
-            <img src="lunch box.jpeg" alt="Lunch Box2" class="lunchbox-picture">
-            <img src="lunch box.jpeg" alt="Lunch Box3" class="lunchbox-picture">
-            <img src="lunch box.jpeg" alt="Lunch Box4" class="lunchbox-picture">
-
+            <a href="recipe.html">
+                <img src="lunch box.jpeg" alt="Lunch Box1" class="lunchbox-picture">
+            </a>
+            <a href="recipe.html">
+                <img src="lunch box.jpeg" alt="Lunch Box2" class="lunchbox-picture">
+            </a>
+            <a href="recipe.html">
+                <img src="lunch box.jpeg" alt="Lunch Box3" class="lunchbox-picture">
+            </a>
+            <a href="recipe.html">
+                <img src="lunch box.jpeg" alt="Lunch Box4" class="lunchbox-picture">
+            </a>
         </div>
     </div>
 </body>
