--- a/feed.html
+++ b/feed.html
@@ -14,7 +14,7 @@
             <a href="feed.html">Feed</a>
             <a href="profile.html">My Profile</a>
             <a href="post.html">Share a New Post</a>
-            <a href="#search">Search</a>
+            <a href="search.html">Search</a>
             <a href="login.html" class="logout">Log Out</a>
         </div>
     </nav>
