--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,8 @@
                     Upload Profile Picture
                 </label>
                 <input type="file" id="profile-picture" accept="image/*" style="display: none;">
+                <div class="image-placeholder"></div>
+
             </div>
 
             <!-- Username -->
