--- a/signup.html
+++ b/signup.html
@@ -17,12 +17,11 @@
 
             <!-- Profile Picture Upload -->
             <div class="form-group photo-upload">
+                <input type="file" id="profile-picture" accept="image/*">
                 <label for="profile-picture" class="photo-label">
                     <i class="fas fa-camera"></i>
                     Upload Profile Picture
                 </label>
-                <input type="file" id="profile-picture" accept="image/*" style="display: none;">
-                <div class="image-placeholder"></div>
 
             </div>
 
