--- a/HTML/login.html
+++ b/HTML/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>What's In My Box</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../CSS/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -20,6 +20,6 @@
         <p class="signup-text">don't have an account yet?</p>
         <button onclick="window.location.href='signup.html'" class="signup-btn">Sign Up!</button>
     </div>
-<script src="login.js"></script>
+<script src="../JS/login.js"></script>
 </body>
 </html>
