--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>My Profile</title>
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="../CSS/profile.css">
 </head>
 <body>
     <nav>
@@ -24,7 +24,7 @@
 <div class="container">
         <div class="left-half">
             <h1>What's In My Box?</h1>
-            <img src="profile.jpg" alt="User Profile Picture" class="profile-picture">
+            <img src="../images/profile.jpg" alt="User Profile Picture" class="profile-picture">
             <p>
                 <div class="username"><strong>@username</strong></div>
                 <span>@Email</span>
@@ -34,16 +34,16 @@
         </div>
         <div class="right-half">
             <a href="recipe.html">
-                <img src="lunch box.jpeg" alt="Lunch Box1" class="lunchbox-picture">
+                <img src="../lunch%20box.jpeg" alt="Lunch Box1" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="lunch box.jpeg" alt="Lunch Box2" class="lunchbox-picture">
+                <img src="../lunch%20box.jpeg" alt="Lunch Box2" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="lunch box.jpeg" alt="Lunch Box3" class="lunchbox-picture">
+                <img src="../lunch%20box.jpeg" alt="Lunch Box3" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="lunch box.jpeg" alt="Lunch Box4" class="lunchbox-picture">
+                <img src="../lunch%20box.jpeg" alt="Lunch Box4" class="lunchbox-picture">
             </a>
         </div>
     </div>
