--- a/HTML/search.html
+++ b/HTML/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Search</title>
-    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="../CSS/search.css">
 </head>
 <body>
 
