--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="signup.css">
-    <script defer src="signup.js"></script>
+    <link rel="stylesheet" href="../CSS/signup.css">
+    <script defer src="../JS/signup.js"></script>
 </head>
 <body>
     <h3>What's In My Box</h3>
@@ -53,7 +53,7 @@
         <p class="signin-text">Already have an account?</p>
         <button onclick="window.location.href='login.html'" class="signin-btn">Sign In</button>
     </div>
-    <script src="signup.js"></script>
+    <script src="../JS/signup.js"></script>
 
 </body>
 </html>
