--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -14,7 +14,7 @@
             <a href="feed.html">Feed</a>
             <a href="profile.html">My Profile</a>
             <a href="post.html">Share a New Post</a>
-            <a href="#search">Search</a>
+            <a href="search.html">Search</a>
             <a href="login.html" class="logout">Log Out</a>
         </div>
     </nav>
@@ -23,27 +23,28 @@
 
 <div class="container">
         <div class="left-half">
-            <h1>What's In My Box?</h1>
+            <h1>My Profile</h1>
             <img src="../images/profile.jpg" alt="User Profile Picture" class="profile-picture">
-            <p>
-                <div class="username"><strong>@username</strong></div>
+            <div class="username">
+                <strong>@username</strong>
+                <br>
                 <span>@Email</span>
                 <br>
                 <strong>Number of lunch boxes</strong>
-            </p>
+            </div>
         </div>
         <div class="right-half">
             <a href="recipe.html">
-                <img src="../lunch%20box.jpeg" alt="Lunch Box1" class="lunchbox-picture">
+                <img src="../images/lunchbox.jpeg" alt="Lunch Box1" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="../lunch%20box.jpeg" alt="Lunch Box2" class="lunchbox-picture">
+                <img src="../images/lunchbox.jpeg"  alt="Lunch Box2" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="../lunch%20box.jpeg" alt="Lunch Box3" class="lunchbox-picture">
+                <img src="../images/lunchbox.jpeg"  alt="Lunch Box3" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="../lunch%20box.jpeg" alt="Lunch Box4" class="lunchbox-picture">
+                <img src="../images/lunchbox.jpeg"  alt="Lunch Box4" class="lunchbox-picture">
             </a>
         </div>
     </div>
