--- a/HTML/recipe.html
+++ b/HTML/recipe.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="image-section">
-            <img src="../lunch%20box.jpeg" alt="Lunchbox" />
+            <img src="../images/lunchbox.jpeg"  alt="Lunchbox" />
         </div>
 
         <div class="right-section">
@@ -47,7 +47,7 @@
                 <li>...</li>
             </ul>
 
-            <p class="tag"><strong>Tag:</strong> #meat</p>
+            <p class="tag"><strong>Dietary Tags:</strong> #meat</p>
         </div>
     </div>
 </body>
