--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>My Feed</title>
     <link rel="stylesheet" href="../CSS/feed.css">
 </head>
@@ -12,7 +14,7 @@
             <a href="feed.html">Feed</a>
             <a href="profile.html">My Profile</a>
             <a href="post.html">Share a New Post</a>
-            <a href="#search">Search</a>
+            <a href="search.html">Search</a>
             <a href="login.html" class="logout">Log Out</a>
         </div>
     </nav>
@@ -20,26 +22,24 @@
     <main>
         <h1 class="heading">My Feed</h1>
         <div class="recipe-grid">
-            <!-- Example recipe cards -->
             <div class="recipe-card">
-                <a href="recipe.html"><img src="../lunch%20box.jpeg" alt="Recipe 1"></a>
+                <a href="recipe.html"><img src="../images/lunchbox.jpeg"  alt="Recipe 1"> </a>
                 <h3>Recipe Title 1</h3>
                 <p>Posted by: Karen Cohen</p>
                 <p>12/11/2024 10:30 PM</p>
             </div>
             <div class="recipe-card">
-                <a href="recipe.html"><img src="../lunch%20box.jpeg" alt="Recipe 2"></a>
+                <a href="recipe.html"><img src="../images/lunchbox.jpeg"  alt="Recipe 2"></a>
                 <h3>Recipe Title 2</h3>
                 <p>Posted by: John Doe</p>
                 <p>12/11/2024 9:45 PM</p>
             </div>
             <div class="recipe-card">
-                <a href="recipe.html"><img src="../lunch%20box.jpeg" alt="Recipe 3"></a>
+                <a href="recipe.html"><img src="../images/lunchbox.jpeg"  alt="Recipe 3"></a>
                 <h3>Recipe Title 3</h3>
                 <p>Posted by: Sarah Lee</p>
                 <p>12/11/2024 8:20 PM</p>
             </div>
-            <!-- Add more recipe cards as needed -->
         </div>
     </main>
 </body>
