--- a/HTML/post.html
+++ b/HTML/post.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post A New Lunch Box</title>
-     <link rel="stylesheet" href="../CSS/post.css">
+    <link rel="stylesheet" href="../CSS/post.css">
 </head>
 <body>
     <nav>
@@ -24,7 +24,7 @@
     <div class="form-container">
         <div class="left-section">
              <form action="#" id = 'post-form' class = "post" method="GET">
-                <div>
+                 <div>
                     <label> Title </label>
                     <input type="text" id = "title" placeholder="add lunchbox name/title" required>
                 </div>
