updated JS validations

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h4>Hello again!</h4>
         <h1>LOG IN</h1>
-        <form action="#" id="login-form" method="GET">
+        <form action="#" id="login-form" method="GET" novalidate>
             <input type="email" id="email" placeholder="Email" class="input-field" required>
             <span class="error" id="emailError"></span>
             <input type="password" id="password" placeholder="Password" class="input-field" required>
