--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <h4>Create Your Account</h4>
-        <form action="#" id="signup-form" method="POST" class = "signup-form" enctype="multipart/form-data">
+        <form action="#" id="signup-form" method="POST" class = "signup-form" enctype="multipart/form-data" novalidate>
 
             <!-- Profile Picture Upload -->
             <div class="form-group photo-upload">
