organize, indentations snd comments

--- a/HTML/feed.html
+++ b/HTML/feed.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>My Feed</title>
     <link rel="stylesheet" href="../CSS/feed.css">
 </head>
@@ -22,22 +21,33 @@
     <main>
         <h1 class="heading">My Feed</h1>
         <div class="recipe-grid">
+            <!-- Recipe 1 -->
             <div class="recipe-card">
-                <a href="recipe.html"><img src="../images/lunchbox.jpeg"  alt="Recipe 1"> </a>
+                <a href="recipe.html">
+                    <img src="../images/meatballs.jpg" alt="Recipe 1">
+                </a>
                 <h3>Recipe Title 1</h3>
-                <p>Posted by: Karen Cohen</p>
+                <p>Posted by: Ido Cohen</p>
                 <p>12/11/2024 10:30 PM</p>
             </div>
+
+            <!-- Recipe 2 -->
             <div class="recipe-card">
-                <a href="recipe.html"><img src="../images/lunchbox.jpeg"  alt="Recipe 2"></a>
+                <a href="recipe.html">
+                    <img src="../images/recipe3.jpg" alt="Recipe 2">
+                </a>
                 <h3>Recipe Title 2</h3>
-                <p>Posted by: John Doe</p>
+                <p>Posted by: Maya Levi</p>
                 <p>12/11/2024 9:45 PM</p>
             </div>
+
+            <!-- Recipe 3 -->
             <div class="recipe-card">
-                <a href="recipe.html"><img src="../images/lunchbox.jpeg"  alt="Recipe 3"></a>
+                <a href="recipe.html">
+                    <img src="../images/AutumnSalad.jpg" alt="Recipe 3">
+                </a>
                 <h3>Recipe Title 3</h3>
-                <p>Posted by: Sarah Lee</p>
+                <p>Posted by: Noam Regev</p>
                 <p>12/11/2024 8:20 PM</p>
             </div>
         </div>
