--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>My Profile</title>
     <link rel="stylesheet" href="../CSS/profile.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav>
         <div class="nav-logo">What's in my Box?</div>
         <div class="nav-links">
@@ -19,12 +19,12 @@
         </div>
     </nav>
 
-<div class = "divider"> </div>
-
-<div class="container">
+    <!-- Profile Content -->
+    <div class="container">
+        <!-- Left Section: User Info -->
         <div class="left-half">
             <h1>My Profile</h1>
-            <img src="../images/profile.jpg" alt="User Profile Picture" class="profile-picture">
+            <img src="../images/newprofile.jpg" alt="User Profile Picture" class="profile-picture">
             <div class="username">
                 <strong>@username</strong>
                 <br>
@@ -33,18 +33,20 @@
                 <strong>Number of lunch boxes</strong>
             </div>
         </div>
+
+        <!-- Right Section: User Lunchboxes -->
         <div class="right-half">
             <a href="recipe.html">
-                <img src="../images/lunchbox.jpeg" alt="Lunch Box1" class="lunchbox-picture">
+                <img src="../images/AutumnSalad.jpg" alt="Lunch Box 1" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="../images/lunchbox.jpeg"  alt="Lunch Box2" class="lunchbox-picture">
+                <img src="../images/meatballs.jpg" alt="Lunch Box 2" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="../images/lunchbox.jpeg"  alt="Lunch Box3" class="lunchbox-picture">
+                <img src="../images/recipe3.jpg" alt="Lunch Box 3" class="lunchbox-picture">
             </a>
             <a href="recipe.html">
-                <img src="../images/lunchbox.jpeg"  alt="Lunch Box4" class="lunchbox-picture">
+                <img src="../images/Recipe2.jpg" alt="Lunch Box 4" class="lunchbox-picture">
             </a>
         </div>
     </div>
