--- a/HTML/recipe.html
+++ b/HTML/recipe.html
@@ -20,11 +20,11 @@
 
     <div class="container">
         <div class="image-section">
-            <img src="../images/lunchbox.jpeg"  alt="Lunchbox" />
+            <img src="../images/meatballs.jpg"  alt="Lunchbox" />
         </div>
 
         <div class="right-section">
-            <h1 class="title">Meatballs With Rice</h1>
+            <h1 class="title">Meatballs In Tomato Sauce</h1>
             <p class="user"><strong>Posted by:</strong> Karen Cohen</p>
             <p class="timestamp"><strong>Posted on:</strong> 12/11/2024 10:30 PM</p>
             <p class="description">
