--- a/HTML/search.html
+++ b/HTML/search.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
     <link rel="stylesheet" href="../CSS/search.css">
 </head>
 <body>
-
-<nav>
+    <!-- Navigation Bar -->
+    <nav>
         <div class="nav-logo">What's in my Box?</div>
         <div class="nav-links">
             <a href="feed.html">Feed</a>
@@ -18,29 +19,33 @@
         </div>
     </nav>
 
-<div class="search-container">
-    <h1>Search</h1>
-    <form class="search-form">
-        <input type="text" placeholder="Type here to search..." class="search-input" />
+    <!-- Search Section -->
+    <div class="search-container">
+        <h1>Search</h1>
+        <form class="search-form">
+            <input
+                type="text"
+                placeholder="Type here to search..."
+                class="search-input"
+            />
 
-        <div class="category-blocks">
-            <label class="category-block">
-                <input type="checkbox" name="category" value="recipes" />
-                Recipes
-            </label>
-            <label class="category-block">
-                <input type="checkbox" name="category" value="users" />
-                Users
-            </label>
-            <label class="category-block">
-                <input type="checkbox" name="category" value="tags" />
-                Tags
-            </label>
-        </div>
+            <div class="category-blocks">
+                <label class="category-block">
+                    <input type="checkbox" name="category" value="recipes" />
+                    Recipes
+                </label>
+                <label class="category-block">
+                    <input type="checkbox" name="category" value="users" />
+                    Users
+                </label>
+                <label class="category-block">
+                    <input type="checkbox" name="category" value="tags" />
+                    Tags
+                </label>
+            </div>
 
-        <button type="submit" class="search-button">Search</button>
-    </form>
-</div>
-
+            <button type="submit" class="search-button">Search</button>
+        </form>
+    </div>
 </body>
 </html>
