--- a/HTML/post.html
+++ b/HTML/post.html
@@ -75,6 +75,8 @@
             </form>
         </div>
 
+          <div id="formSuccess" class="success-message" ></div>
+
         <!-- Right Section: File Upload -->
         <div class="right-section">
             <div class="photo-upload">
