--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -73,6 +73,9 @@
             <button type="submit" class="signup-btn">Create Account</button>
         </form>
 
+         <!-- Success Message -->
+          <div id="formSuccess" class="success-message" ></div>
+
         <p class="signin-text">Already have an account?</p>
         <button
             onclick="window.location.href='login.html'"
@@ -81,5 +84,6 @@
             Sign In
         </button>
     </div>
+ <script src="../JS/signup.js"></script>
 </body>
 </html>
