updated photo feedback in signup and updated css success messages

--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -27,6 +27,7 @@
                 <label for="profile-picture" class="photo-label">
                     <i class="fas fa-camera"></i>
                     Upload Profile Picture
+                   <span id="file-feedback" class="file-feedback">No file chosen</span>
                 </label>
             </div>
 
